# cpu_utilization_service

./: README.md  pyproject.toml  requirements.txt  setup.cfg
client/: cpu_utilization.service  main.py
cpu_info/: apps.py  models.py  serializers.py
cpu_utilization/: wsgi.py
cpu_utilization_service/: manage.py
cpu_utilization_service/cpu_info/: tests.py  urls.py  views.py
cpu_utilization_service/cpu_info/migrations/: 0001_initial.py
cpu_utilization_service/cpu_utilization/: asgi.py  settings.py  urls.py
