[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cpu_utilization_service_VAFIGSTAR"
version = "0.0.1"
authors = [
  { name="Avel L", email="avel@yandex.ru" },
]
description = "A small cpu utilization info service"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/varfigstar/cpu_utilization_service"
"Bug Tracker" = "https://github.com/varfigstar/cpu_utilization_service/issues"