[metadata]
name = cpu_utilization_service_VARFIGSTAR
version = 0.0.1
author = Avel L
author_email = flamerdazle@yandex.ru
description = A package template
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/varfigstar/cpu_utilization_service
project_urls =
Bug Tracker = https://github.com/varfigstar/cpu_utilization_service/issues
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
   django>4<5
   djangorestframework>3<4